src/test/deca/context/valid/provided/affecter_une_valeur_a_un_attribut.deca
// Descrption : on essaye d'affecter la valeur 1 a aun attribut :
//
//

class A {
	int x;
}

{
    A a = new A();
    a.x = 1;
}
