src/test/deca/context/invalid/provided/Not.deca
// DESCRIPTION : Not d'un entier
//RESULTAT: Unary not is not defined for this type (3.37)
{
  int a = 2;
  int b = !2;
}
